# hdf5_plugins

./: .clang-format  .gitignore  .gitmodules  Building.txt  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.save  CMakeUserPresets.json.test  COPYING  Makefile.am  README.md  README.txt  configure.ac  forksync.sh
BITGROOM/: CMakeLists.txt  Makefile.am  README.txt  config.h.in  configure.ac
BITGROOM/Additional_Legal/: LICENSE
BITGROOM/config/: CacheURLs.cmake
BITGROOM/config/cmake/: ConfigureChecks.cmake  H5BITGROOMMacros.cmake  H5PL_Examples.cmake.in  README.txt.cmake.in  cacheinit.cmake  config.h.in  grepTest.cmake  h5bitgroom-config-version.cmake.in  h5bitgroom-config.cmake.in  runTest.cmake
BITGROOM/example/: CMakeLists.txt  Makefile.am  h5ex_d_bitgroom.c  h5filter_specials_bitgroom.c
BITGROOM/example/test/: test.sh  testCM.sh
BITGROOM/example/testfiles/: h5ex_d_bitgroom.ddl  h5repack_floats.h5-ud_convert.ddl  h5repack_layout.h5-ud_convert.ddl
BITGROOM/src/: CMakeLists.txt  H5Zbitgroom.c  Makefile.am
BITROUND/: CMakeLists.txt  CTestConfig.cmake  Makefile.am  README.md  README.txt  config.h.in  configure.ac
BITROUND/Additional_Legal/: LICENSE
BITROUND/config/: CacheURLs.cmake
BITROUND/config/cmake/: CTestCustom.cmake  ConfigureChecks.cmake  H5BITROUNDMacros.cmake  H5PLTests.c  H5PL_Examples.cmake.in  HDFMacros.cmake  HDFPluginMacros.cmake  README.txt.cmake.in  (+5 more)
BITROUND/example/: CMakeLists.txt  Makefile.am  h5ex_d_bitround.c  h5ex_d_granularbr.c  h5filter_badparam_bitround.c  h5filter_specials_bitround.c  h5repack_floats.c
BITROUND/src/: CMakeLists.txt  H5Zbitround.c  H5Zgranularbr.c  Makefile.am
BLOSC/: CMakeLists.txt  Makefile.am  README.txt  blosc_version.h  config.h.in  configure  configure.ac
BLOSC/config/: CMakeLists.txt  CacheURLs.cmake  blosc-CMakeLists.txt  zlib-CMakeLists.txt  zlibdev-CMakeLists.txt
BLOSC/example/: CMakeLists.txt  Makefile.am  h5ex_d_blosc.c  makefile.am  makefile.in  test.sh.in
BLOSC/src/: CMakeLists.txt  H5Zblosc.c  Makefile.am
BLOSC2/: CMakeLists.txt  Makefile.am  README.txt  blosc2_version.h  config.h.in  configure.ac
BLOSC2/config/: CacheURLs.cmake
BLOSC2/example/: CMakeLists.txt  Makefile.am  h5ex_d_blosc2.c
BLOSC2/src/: CMakeLists.txt  H5Zblosc2.c  Makefile.am
BSHUF/: CMakeLists.txt  COPYING  Makefile.am  README.txt  config.h.in  configure  configure.ac  libtool
BSHUF/config/: CacheURLs.cmake
BSHUF/example/: CMakeLists.txt  Makefile.am  h5ex_d_bshuf.c
BSHUF/src/: CMakeLists.txt  H5Zbshuf.c  Makefile.am  bitshuffle.c  bitshuffle.h  bitshuffle_core.c  bitshuffle_core.h  bitshuffle_internals.h  iochain.c  iochain.h
BZIP2/: CMakeLists.txt  Makefile.am  README.txt  config.h.in  configure  configure.ac  libtool
BZIP2/config/: CMakeLists.txt  CacheURLs.cmake  ConfigureChecks.cmake
BZIP2/example/: CMakeLists.txt  Makefile.am  h5ex_d_bzip2.c  run_tests.sh  test.sh.in
BZIP2/m4/: libtool.m4
BZIP2/src/: CMakeLists.txt  H5Zbzip2.c  Makefile.am
GRANULAR_BITROUND/: CMakeLists.txt  Makefile.am  README.txt  config.h.in  configure.ac
GRANULAR_BITROUND/config/: CacheURLs.cmake
GRANULAR_BITROUND/example/: CMakeLists.txt  Makefile.am  h5filter_specials_granular_bitround.c
GRANULAR_BITROUND/src/: CMakeLists.txt  Makefile.am
JPEG/: CMakeLists.txt  COPYING  Makefile.am  README.txt  configure.ac
JPEG/config/: CMakeLists.txt  CacheURLs.cmake  ConfigureChecks.cmake  jconfig.h.in
JPEG/example/: CMakeLists.txt  Makefile.am  h5ex_d_jpeg.c  run_tests.sh
JPEG/src/: CMakeLists.txt  H5Zjpeg.c  Makefile.am
LZ4/: CMakeLists.txt  LZ4_HDF5_format.md  Makefile.am  README.txt  config.h.in  configure  configure.ac  libtool
LZ4/config/: CMakeLists.txt  CacheURLs.cmake
LZ4/example/: CMakeLists.txt  Makefile.am  h5ex_d_lz4.c  run_tests.sh  test.sh.in
LZ4/src/: CMakeLists.txt  H5Zlz4.c  Makefile.am
LZF/: CMakeLists.txt  COPYING  README.txt  config.h.in  configure  configure.ac  libtool
LZF/config/: CMakeLists.txt  CacheURLs.cmake  ConfigureChecks.cmake
LZF/example/: CMakeLists.txt  Makefile.am  h5ex_d_lzf.c  makefile.in  run_tests.sh  test.sh.in
LZF/src/: CMakeLists.txt  H5Zlzf.c  Makefile.am  makefile.am
MAFISC/: CMakeLists.txt  COPYING  CTestConfig.cmake  Makefile.am  README.txt  config.h.in  configure  configure.ac  libtool
MAFISC/example/: CMakeLists.txt  Makefile.am  h5ex_d_mafisc.c  makefile.am  makefile.in  test.sh.in
MAFISC/src/: CMakeLists.txt  Makefile.am  adaptive-filter.c  adaptive-filter.h  bit-sorter-filter.c  combined-filter.c  combined-filter.h  difference-filter.c  difference-filter.h  filter-cascade-filter.c  filter-cascade-filter.h  filter-test.c  lorenzo-filter.c  lorenzo-filter.h  mafisc.c  mafisc.h  makefile.am  makefile.in  sign-filter.c  simple-hash.c  simple-hash.h  time-filter.c  time-filter.h  variable-filter.c  variable-filter.h
SZ/: CMakeLists.txt  README.txt  configure.ac
SZ/Additional_Legal/: copyright-and-BSD-license.txt
SZ/example/: CMakeLists.txt  h5ex_d_sz.c
SZ/src/: CMakeLists.txt  H5Zszf.c  H5Zszf.h
SZF/: CMakeLists.txt  COPYING  CTestConfig.cmake  Makefile.am  README.txt  config.h.in  configure.ac
SZF/example/: CMakeLists.txt  Makefile.am  h5ex_d_sz.c
SZF/src/: CMakeLists.txt  H5Zszf.c  Makefile.am
ZFP/: CMakeLists.txt  COPYING  CTestConfig.cmake  Makefile  README.md  README.txt  UPDATING_ZFP_SUBTREE.md  config.h.in  configure  configure.ac  libtool
ZFP/config/: CMakeLists.txt  CacheURLs.cmake  srcCMakeLists.txt
ZFP/docs/: h5repack.rst  installation.rst
ZFP/example/: CMakeLists.txt  Makefile.am  h5ex_d_zfp.c  test.sh.in
ZFP/src/: CMakeLists.txt  H5Zzfp.c  H5Zzfp_plugin.h  H5Zzfp_props.c  H5Zzfp_props.h  H5Zzfp_props_f.F90  H5Zzfp_props_private.h  H5Zzfp_version.h  Makefile.am  makefile.am  makefile.in
ZSTD/: CMakeLists.txt  Makefile.am  README.txt  configure.ac
ZSTD/config/: CMakeLists.txt  CacheURLs.cmake  libCMakeLists.txt
ZSTD/example/: CMakeLists.txt  Makefile.am  h5ex_d_zstd.c  run_tests.sh
ZSTD/src/: CMakeLists.txt  H5Zzstandard.c  H5Zzstd.c  Makefile.am
libs/: Makefile.am  lzma1604.7z
libs/JPEG9c/: Makefile.am
(+797 files in other folders)
