# Copyright by The HDF Group. All rights reserved.

# This builds the main BITROUND directory. This is the granularbr
# filter. It's similar to the built in HDF5 shuffle filter, but works
# on a bit level instead of bytes.

# Allen Byrne, Ed Hartnett 1/15/19

# This directory stores libtool macros, put there by aclocal.
ACLOCAL_AMFLAGS = -I m4

# Build these subdirectories.
SUBDIRS = src #example
